# cs_scanner

./: .gitignore  CHANGELOG.md  README.md  encryption.py  pyproject.toml  requirements-aws.txt  requirements-gcp.txt  s3.py  scanner.py  setup.py
.github/workflows/: aws_tests.yml  gcp_tests.yml  tests.yml
aws/: encryption.py  helpers.py  policy_scanner.py  public_access.py  s3.py
aws/tests/: encryption.py  test_encryption.py  test_public_access.py  test_s3.py
gcp/: encryption.py  public_access.py  storage.py
gcp/tests/: test_storage.py
src/cs_scanner/: cli.py
src/cs_scanner/aws/: s3.py
src/cs_scanner/az/: storage_account.py
src/cs_scanner/gcp/: storage.py
src/cs_scanner/shared/: output.py
tests/aws/: test_s3.py
tests/gcp/: test_storage.py
